--- a/www/index.html
+++ b/www/index.html
@@ -99,8 +99,7 @@
       <script type="text/javascript" src="js/index.js"></script>
       <script type="text/javascript" src="mobileui/jquery-3.0.1.js"></script>
       <script type="text/javascript"> $(document).ready(() => sincronizar());</script>
-
+      <script type="text/javascript"> $(document).ready(() => sincronizarBares());</script>
 
 </body>
-
 </html>
